# rpg_svo_pro_open

./: CMakeLists.txt  README.md
cmake/: PatchGtsamBoost.cmake  SvoCompilerFlags.cmake  svo-config.cmake.in
doc/: benchmarking.md  calibration.md  global_map.md  vio.md
doc/frontend/: frontend_fla.md  visual_frontend.md
examples/: CMakeLists.txt  download_euroc.sh  euroc_common.h  euroc_mono_vio.cpp  euroc_mono_vo.cpp  euroc_stereo_vio.cpp  run_all_benchmarks.sh
rpg_common/: CMakeLists.txt
rpg_common/include/rpg_common/: eigen_type.h
svo/: CMakeLists.txt
svo/include/svo/: abstract_bundle_adjustment.h  svo_factory.h
svo/src/: frame_handler_base.cpp  imu_handler.cpp  stereo_triangulation.cpp  svo_factory.cpp
svo_ceres_backend/: CMakeLists.txt
svo_ceres_backend/include/svo/: ceres_backend_factory.h  ceres_backend_interface.hpp
svo_ceres_backend/include/svo/ceres_backend/: homogeneous_point_local_parameterization.hpp  local_parameterization_additional_interfaces.hpp  map.hpp  marginalization_error.hpp  parameter_block.hpp  pose_local_parameterization.hpp
svo_ceres_backend/src/: ceres_backend_factory.cpp  ceres_backend_interface.cpp  estimator.cpp  homogeneous_point_local_parameterization.cpp  local_parameterization_additional_interfaces.cpp  map.cpp  map_alignment.cpp  pose_local_parameterization.cpp
svo_ceres_backend/test/: test_estimator.cpp  test_imu_error.cpp
svo_common/: CMakeLists.txt
svo_common/include/svo/common/: logging.h
svo_direct/: CMakeLists.txt
svo_direct/test/: test_depth_estimation.cpp  test_edgelet_direction.cpp  test_edgelet_extraction.cpp  test_feature_alignment.cpp  test_feature_detection.cpp  test_utils.h
svo_global_map/: CMakeLists.txt
svo_img_align/: CMakeLists.txt
svo_online_loopclosing/: CMakeLists.txt
svo_online_loopclosing/include/svo/online_loopclosing/: loop_closing.h
svo_online_loopclosing/src/: map_alignment.cpp
svo_pgo/: CMakeLists.txt
svo_pgo/include/svo/pgo/: pgo.h
svo_pgo/src/: pgo.cpp
svo_test_utils/: CMakeLists.txt
svo_test_utils/src/: point_cloud_generator.cpp  test_utils.cpp
svo_tracker/: CMakeLists.txt
svo_vio_common/: CMakeLists.txt
vikit/vikit_cameras/: CMakeLists.txt
vikit/vikit_common/: CMakeLists.txt
vikit/vikit_common/include/aslam/common/: yaml-serialization.h
vikit/vikit_common/include/vikit/: math_utils.h  params_helper.h
vikit/vikit_solver/: CMakeLists.txt
